--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<p>A software development quotation is a project cost estimate, usually sent with a software development proposal before you start the job. This document is more important than an invoice because your prospective client must agree to the software quotation and terms before proceeding with the project.</p>
 </body>
 </html>
