Update index.html with basic meta
Added some meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-<h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
+
 <p>A software development quotation is a project cost estimate, usually sent with a software development proposal before you start the job. This document is more important than an invoice because your prospective client must agree to the software quotation and terms before proceeding with the project.</p>
 <p>The software development quotation will include everything you discussed with your client during the briefing session(s). Your quote must provide a clear picture of your products/services and pricing.</p>
 <p>It's a good idea to ask your client for their budget during the briefing, as this will help you create a software development quote that meets expectations and constraints. Keep in mind that some clients will be reluctant to share a budget, wary of it being over your estimate.</p>
 <p>Every professional quote must include basic information of the parties and relevant data to help the recipient make a decision. A software quotation might consist of a few essential line items or be more detailed and comprehensive, depending on the nature of the project.</p>
+
 </body>
 </html>
